WebView#完善webview测试代码

--- a/feature/launch/app/src/main/res/layout/feature_launch_app_activity_web.xml
+++ b/feature/launch/app/src/main/res/layout/feature_launch_app_activity_web.xml
@@ -4,7 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/webview_root_fl"
-  >
+
+    >
+
+    <FrameLayout
+        android:id="@+id/webview_root_fl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+         
+
+    <ProgressBar
+        android:id="@+id/pb_web"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="3dp" />
+
+
+             
+
 
 </FrameLayout>
