--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_activity_login.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_activity_login.xml
@@ -5,9 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/title"
-        layout="@layout/lib_common_base_toolbar" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
@@ -15,7 +12,7 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
