--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_pokemon.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_pokemon.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="pokemon"
-            type="com.bsnl.sample.pkg.feature.model.ListingData" />
+            type="com.bsnl.sample.pkg.feature.data.model.PokeItemModel" />
     </data>
 
     <androidx.cardview.widget.CardView
