fix# 懒加载fragment初始化监听时机延后

--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_pokemon.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_pokemon.xml
@@ -19,14 +19,14 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <ImageView
                 android:id="@+id/avator"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginTop="10dp"
                />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
