--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_fragment_first.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_fragment_first.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
     <TextView
         android:id="@+id/tv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text=""
+        android:layout_height="500dp"
+        android:text="123"
         android:gravity="center"
         android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/color_white"
-        android:background="@color/colorPrimary"
+        android:background="#003366"
         />
 
 
