--- a/lib/base/src/main/res/values/styles.xml
+++ b/lib/base/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="lib_base_AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="lib_base_AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
