feat# 全局透明化状态栏，让所有页面应用fitSystemWindow，状态栏颜色自己控制

--- a/lib/base/src/main/res/values/styles.xml
+++ b/lib/base/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimaryDark</item>
+        <!--背景颜色及和透明程度-->
+        <item name="android:windowBackground">@color/colorPrimary</item>
     </style>
 
 
