--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_activity_main.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_activity_main.xml
@@ -2,7 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+   >
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/white"
+        />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container"
