--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_fragment_first.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_fragment_first.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+   >
 
 
     <TextView
         android:id="@+id/tv"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:text="123"
+        android:background="#003366"
         android:gravity="center"
+        android:text="123"
+        android:textColor="@color/color_white"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/color_white"
-        android:background="#003366"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
