--- a/feature/constraint/pkg/src/main/res/layout/feature_constraint_pkg_activity_contraintlimit.xml
+++ b/feature/constraint/pkg/src/main/res/layout/feature_constraint_pkg_activity_contraintlimit.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_avatar"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:src="@drawable/icon_failed"
+        android:src="@drawable/lib_common_icon_failed"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
