--- a/lib/common/src/main/res/layout/lib_common_stub_no_data.xml
+++ b/lib/common/src/main/res/layout/lib_common_stub_no_data.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/icon_empty"
+        android:src="@drawable/lib_common_icon_empty"
         app:layout_constraintBottom_toTopOf="@+id/no_data_txt"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
