--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_activity_async.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_activity_async.xml
@@ -4,6 +4,7 @@
     android:id="@+id/root_main"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/color_progress_4"
     android:layout_height="match_parent">
 
     <ImageView
