--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_pokemon.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_pokemon.xml
@@ -1,41 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardUseCompatPadding="true">
 
-    <data>
-        <variable
-            name="pokemon"
-            type="com.bsnl.sample.pkg.feature.data.model.PokeItemModel" />
-    </data>
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardUseCompatPadding="true">
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/avator"
             android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_margin="10dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@android:color/background_dark" />
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
 
-            <ImageView
-                android:id="@+id/avator"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginTop="10dp"
-               />
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="@{pokemon.name}"
-                android:textColor="@android:color/background_dark" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-</layout>
