--- a/lib/common/src/main/res/layout/lib_common_recycerview.xml
+++ b/lib/common/src/main/res/layout/lib_common_recycerview.xml
@@ -4,7 +4,7 @@
     android:id="@+id/rv"
     android:layout_width="match_parent"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
    >
 
 </androidx.recyclerview.widget.RecyclerView>
