--- a/feature/launch/app/src/main/res/values/styles.xml
+++ b/feature/launch/app/src/main/res/values/styles.xml
@@ -1,10 +1,18 @@
 <resources>
-    <!-- Base application theme. -->
-<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-<!--        <item name="colorPrimary">@color/colorPrimary</item>-->
-<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-<!--        <item name="colorAccent">@color/colorAccent</item>-->
-<!--    </style>-->
+
+
+
+    <style name="feature_launch_app_text" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">15dp</item>
+        <item name="android:textColor">@color/white</item>
+       <item name="android:background">@color/black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_width">match_parent</item>
+
+        <item name="android:layout_margin">10dp</item>
+    </style>
+
+
 
 </resources>
