ref# add some item at MainLayout.kt

--- a/feature/constraint/pkg/src/main/res/layout/feature_constraint_pkg_activity_main.xml
+++ b/feature/constraint/pkg/src/main/res/layout/feature_constraint_pkg_activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".feature.ConstraintDemoActivity">
 
     <LinearLayout
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -17,7 +18,7 @@
             android:id="@+id/tv_center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -32,7 +33,7 @@
             android:id="@+id/tv_weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -47,7 +48,7 @@
             android:id="@+id/tv_baseline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -62,7 +63,7 @@
             android:id="@+id/tv_constraint_limit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -76,7 +77,7 @@
             android:id="@+id/tv_bias"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -90,7 +91,7 @@
             android:id="@+id/tv_chain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -104,7 +105,7 @@
             android:id="@+id/tv_gone_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -119,7 +120,7 @@
             android:id="@+id/tv_w_h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -133,7 +134,7 @@
             android:id="@+id/tv_percent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -148,7 +149,7 @@
             android:id="@+id/tv_guide_line"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -163,7 +164,7 @@
             android:id="@+id/tv_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -177,7 +178,7 @@
             android:id="@+id/tv_layer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -191,7 +192,7 @@
             android:id="@+id/tv_barrier"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -205,7 +206,7 @@
             android:id="@+id/tv_flow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
@@ -220,7 +221,7 @@
             android:id="@+id/tv_constraintSet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/color_progress_3"
             android:gravity="center"
             android:padding="10dp"
