ref# 修改组件化方案>ARouter，完善基础能力

--- a/lib/common/src/main/res/layout/lib_common_base_layout.xml
+++ b/lib/common/src/main/res/layout/lib_common_base_layout.xml
@@ -5,12 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ViewStub
-        android:id="@+id/stub_titlebar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top" />
-
     <FrameLayout
         android:id="@+id/content_wrap"
         android:layout_width="match_parent"
@@ -33,8 +27,25 @@
             android:layout_height="match_parent" />
 
         <ViewStub
+            android:id="@+id/stub_custom"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ViewStub
             android:id="@+id/stub_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
+
+    <ViewStub
+        android:id="@+id/stub_titlebar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top" />
+
+    <ViewStub
+        android:id="@+id/stub_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom" />
 </FrameLayout>
