--- a/lib/common/src/main/res/layout/lib_common_base_layout_with_refresh.xml
+++ b/lib/common/src/main/res/layout/lib_common_base_layout_with_refresh.xml
@@ -4,12 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ViewStub
-        android:id="@+id/stub_titlebar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top" />
-
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/content_wrap"
         android:layout_width="match_parent"
@@ -17,9 +11,10 @@
         android:layout_gravity="top">
 
         <FrameLayout
+            android:id="@+id/fl_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clickable="true">
+            >
             <!-- 加载等待 -->
             <ViewStub
                 android:id="@+id/stub_loading"
@@ -36,11 +31,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-
+            <ViewStub
+                android:id="@+id/stub_custom"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
             <ViewStub
                 android:id="@+id/stub_content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </FrameLayout>
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+
+    <ViewStub
+        android:id="@+id/stub_titlebar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top" />
+
+    <ViewStub
+        android:id="@+id/stub_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom" />
 </FrameLayout>
