--- a/lib/common/src/main/res/layout/lib_common_stub_no_data.xml
+++ b/lib/common/src/main/res/layout/lib_common_stub_no_data.xml
@@ -26,7 +26,7 @@
         android:id="@+id/no_data_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:paddingLeft="69dp"
         android:paddingRight="69dp"
@@ -37,9 +37,40 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/no_data_image"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_illustrate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp"
+        android:textColor="#8c8c8c"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/no_data_txt"
+        tools:text="辅助信息" />
+
+    <TextView
+        android:id="@+id/tv_nav"
+        android:layout_width="162dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="60dp"
+        android:gravity="center"
+        android:textColor="#8c8c8c"
+        android:textSize="12sp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:bl_stroke_width="0.5dp"
+        app:bl_stroke_color="#8c8c8c"
+        app:bl_corners_radius="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_illustrate"
+        tools:text="去购车" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
