--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_pokemon.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_pokemon.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    tools:ignore="ResourceName">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +17,8 @@
             android:id="@+id/avator"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginTop="10dp" />
+            android:scaleType="centerCrop"
+            />
 
         <TextView
             android:id="@+id/name"
