--- a/lib/common/src/main/res/layout/lib_common_recycerview.xml
+++ b/lib/common/src/main/res/layout/lib_common_recycerview.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rv"
     android:layout_width="match_parent"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     android:layout_height="wrap_content"
-   >
+    tools:ignore="ResourceName">
 
 </androidx.recyclerview.widget.RecyclerView>
