feat：基类加入屏幕适配

--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_countdown.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_recycle_item_countdown.xml
@@ -12,8 +12,8 @@
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70pt"
+        android:layout_height="70pt"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
