--- a/lib/common/src/main/res/layout/lib_common_recycerview.xml
+++ b/lib/common/src/main/res/layout/lib_common_recycerview.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     android:layout_height="wrap_content"
+    android:overScrollMode="never"
     tools:ignore="ResourceName">
 
 </androidx.recyclerview.widget.RecyclerView>
