--- a/lib/base/src/main/res/values/styles.xml
+++ b/lib/base/src/main/res/values/styles.xml
@@ -28,12 +28,10 @@
 
     <style name="feature_launch_app_text" parent="Widget.AppCompat.TextView" >
         <item name="android:textSize">15sp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:background">@color/black</item>
+        <item name="android:background">#7FA7CB</item>
         <item name="android:gravity">center</item>
-        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_height">60dp</item>
         <item name="android:layout_width">match_parent</item>
-
         <item name="android:layout_margin">10dp</item>
     </style>
 
