--- a/lib/common/src/main/res/layout/common_stub_progress_wait.xml
+++ b/lib/common/src/main/res/layout/common_stub_progress_wait.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
-    android:visibility="gone"
+    android:visibility="visible"
     tools:visibility="visible">
 
     <ImageView
