feat：升级gradle; 新增几个kotlin工具类；实践ActivityResultAPI，放弃startActivityForResult

--- a/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_activity_download.xml
+++ b/feature/sample/pkg/src/main/res/layout/feature_sample_pkg_activity_download.xml
@@ -17,4 +17,15 @@
         android:background="@color/colorPrimary"
         android:layout_height="200dp"/>
 
+    <TextView
+        android:id="@+id/tvClose"
+        android:text="close"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:background="#00BCD4"
+        android:layout_height="200dp"/>
+
 </LinearLayout>
