--- a/lib/baseArch/src/main/res/layout/base_error_layout.xml
+++ b/lib/baseArch/src/main/res/layout/base_error_layout.xml
@@ -16,16 +16,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:scaleType="fitCenter"
         android:src="@drawable/base_icon_error"
-        app:layout_constraintBottom_toTopOf="@+id/tv_reload"
+        app:layout_constraintBottom_toTopOf="@+id/tv_msg"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
-        android:id="@+id/tv_reload"
+        android:id="@+id/tv_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -50,8 +49,9 @@
         android:paddingBottom="8dp"
         android:text="重试"
         android:textSize="15sp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_reload" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_msg" />
 </androidx.constraintlayout.widget.ConstraintLayout>
