--- a/lib/baseArch/src/main/res/values/styles.xml
+++ b/lib/baseArch/src/main/res/values/styles.xml
@@ -3,6 +3,11 @@
     tools:ignore="ResourceName"
     >
 
+    <style name="Hint_Title">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <style name="lib_base_AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
