feat: 优化base,优化moshi,优化coil的封装

--- a/lib/baseArch/src/main/res/layout/base_empty_activity.xml
+++ b/lib/baseArch/src/main/res/layout/base_empty_activity.xml
@@ -9,7 +9,8 @@
     android:layout_gravity="center"
     android:background="@color/color_white"
     android:visibility="gone"
-    tools:visibility="visible">
+    tools:visibility="visible"
+    tools:ignore="ResourceName">
 
 
 
