--- a/lib/baseArch/src/main/res/values/styles.xml
+++ b/lib/baseArch/src/main/res/values/styles.xml
@@ -38,6 +38,7 @@
         <item name="android:layout_height">60dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_margin">10dp</item>
+        <item name="android:textColor">#333333</item>
     </style>
 
 
